--- a/Steps data anonymization + wrangling (XML to CSV).ipynb
+++ b/Steps data anonymization + wrangling (XML to CSV).ipynb
@@ -8,6 +8,7 @@
     "<b>Preparing Apple Health data for analysis/visualization<b/>\n",
     "- Download personal data from app; unzip XML file\n",
     "- Parse to DataFrame using python standard libraries + Pandas\n",
+    "- Anonymize Personal Identifiable Information (PII) using regular expression replacements\n",
     "- Explore and wrangle/clean, extracting data related to 'step count'\n",
     "- Save data of interest to csv for external tabular analysis"
    ]
@@ -21,7 +22,9 @@
    "source": [
     "import pandas as pd\n",
     "import xml.etree.ElementTree as ET\n",
-    "import io"
+    "import io\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
@@ -50,8 +53,8 @@
     "    records.append(record_data)\n",
     "\n",
     "#Create DataFrame\n",
-    "df = pd.DataFrame(records)\n",
-    "print(df.shape)"
+    "df_export = pd.DataFrame(records)\n",
+    "print(df_export.shape)"
    ]
   },
   {
@@ -157,17 +160,17 @@
    "source": [
     "#Pre-display cleaning/wrangling\n",
     " #Anonymize Health Kit Device object identifiers\n",
-    "df['device'] = df['device'].str.replace('<<HKDevice: .*?>, ', 'HKDevice: anonymized>, ', regex=True)\n",
+    "df_export['device'] = df_export['device'].str.replace('<<HKDevice: .*?>, ', 'HKDevice: anonymized>, ', regex=True)\n",
     " #Anonymize actual device name\n",
-    "df['sourceName'] = df['sourceName'].str.replace('.*iPhone.*', 'iPhone', regex=True)\n",
+    "df_export['sourceName'] = df_export['sourceName'].str.replace('.*iPhone.*', 'iPhone', regex=True)\n",
     "\n",
-    "print(df.sourceName.value_counts())\n",
+    "print(df_export.sourceName.value_counts())\n",
     "\n",
     " #Remove records from 'Health' source\n",
-    "df = df[df['sourceName'] != 'Health']\n",
-    "df.reset_index(drop=True, inplace=True)\n",
+    "df_export = df_export[df_export['sourceName'] != 'Health']\n",
+    "df_export.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "df.head(2)"
+    "df_export.head(2)"
    ]
   },
   {
@@ -259,8 +262,8 @@
    "source": [
     "#Cleaning/wrangling continued\n",
     " #Simplify 'type' column\n",
-    "df['type'] = df['type'].str.replace('HKQuantityTypeIdentifier', '')\n",
-    "df.head(2)"
+    "df_export['type'] = df_export['type'].str.replace('HKQuantityTypeIdentifier', '')\n",
+    "df_export.head(2)"
    ]
   },
   {
@@ -294,7 +297,7 @@
    ],
    "source": [
     "#Review record categories\n",
-    "df.type.value_counts()"
+    "df_export.type.value_counts()"
    ]
   },
   {
@@ -391,16 +394,70 @@
     }
    ],
    "source": [
-    "#Df: copy of steps data only\n",
-    "steps_df = df[df['type']=='StepCount'].copy()\n",
-    "print(steps_df.shape)\n",
-    "steps_df.head(2)"
+    "#New df: steps data only\n",
+    "df_steps = df_export[df_export['type']=='StepCount'].copy()\n",
+    "print(df_steps.shape)\n",
+    "df_steps.head(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "ecdf2bbe-f516-450a-85ed-9520e7f3f70f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type             object\n",
+       "sourceName       object\n",
+       "sourceVersion    object\n",
+       "unit             object\n",
+       "creationDate     object\n",
+       "startDate        object\n",
+       "endDate          object\n",
+       "value            object\n",
+       "device           object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Check dtypes\n",
+    "df_steps.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "64096782-5350-4444-aa73-d7557c1e2752",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Convert step count to int\n",
+    "df_steps['stepCount'] = pd.to_numeric(df_steps['value'])\n",
+    "df_steps.stepCount.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "69647f85-5ae4-48d8-8edd-0b913806a2bf",
    "metadata": {},
    "outputs": [
     {
@@ -413,12 +470,12 @@
    ],
    "source": [
     "#Inspect full 'device' column value for use\n",
-    "print(steps_df.device.values[1])"
+    "print(df_steps.device.values[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "1edf3c14-34fb-44ca-b137-58631b54c889",
    "metadata": {},
    "outputs": [
@@ -444,17 +501,15 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>type</th>\n",
-       "      <th>creationDate</th>\n",
        "      <th>startDate</th>\n",
        "      <th>endDate</th>\n",
-       "      <th>value</th>\n",
+       "      <th>stepCount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>StepCount</td>\n",
-       "      <td>2022-04-23 16:51:21 -0400</td>\n",
        "      <td>2022-04-23 16:36:00 -0400</td>\n",
        "      <td>2022-04-23 16:45:57 -0400</td>\n",
        "      <td>141</td>\n",
@@ -462,7 +517,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>StepCount</td>\n",
-       "      <td>2022-04-23 16:59:28 -0400</td>\n",
        "      <td>2022-04-23 16:46:25 -0400</td>\n",
        "      <td>2022-04-23 16:49:23 -0400</td>\n",
        "      <td>86</td>\n",
@@ -472,29 +526,25 @@
        "</div>"
       ],
       "text/plain": [
-       "        type               creationDate                  startDate  \\\n",
-       "0  StepCount  2022-04-23 16:51:21 -0400  2022-04-23 16:36:00 -0400   \n",
-       "1  StepCount  2022-04-23 16:59:28 -0400  2022-04-23 16:46:25 -0400   \n",
-       "\n",
-       "                     endDate value  \n",
-       "0  2022-04-23 16:45:57 -0400   141  \n",
-       "1  2022-04-23 16:49:23 -0400    86  "
+       "        type                  startDate                    endDate  stepCount\n",
+       "0  StepCount  2022-04-23 16:36:00 -0400  2022-04-23 16:45:57 -0400        141\n",
+       "1  StepCount  2022-04-23 16:46:25 -0400  2022-04-23 16:49:23 -0400         86"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Drop unused columns\n",
-    "steps_df.drop(steps_df[['sourceName','sourceVersion','unit','device',]], axis=1, inplace=True)\n",
-    "steps_df.head(2)"
+    "df_steps.drop(df_steps[['sourceName','sourceVersion','unit','creationDate','device','value']], axis=1, inplace=True)\n",
+    "df_steps.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0b540127-c5b9-4e7e-9f30-bcba3540aadb",
    "metadata": {},
    "outputs": [
@@ -508,48 +558,287 @@
     }
    ],
    "source": [
-    "#Output date range; review datetime format\n",
-    " #Values in ISO 8601 format; no transformation needed\n",
-    "print(steps_df.startDate.min())\n",
-    "print(steps_df.startDate.max())"
+    "#Output startDate range; review datetime formatting\n",
+    " #ISO 8601 format\n",
+    "print(df_steps.startDate.min())\n",
+    "print(df_steps.startDate.max())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "id": "c7ca593b-39f4-4ca0-b604-96d611bb3fee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-04-23 16:36:00 -0400'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " #Date column(s) currently string type:\n",
+    "df_steps['startDate'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e3ea03a9-34fe-4469-9b11-594ad8cfcf51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-04-23 16:36:00-04:00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2022-04-23 16:36:00-0400', tz='UTC-04:00')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#New df: convert date columns to datetime, split values into new columns\n",
+    "\n",
+    "df_steps_dt = df_steps.copy()\n",
+    "\n",
+    " #In place\n",
+    "#df_steps_dt['startDate'] = pd.to_datetime(df_steps_dt['startDate'])\n",
+    "#df_steps_dt['startDate'] = pd.to_datetime(df_steps_dt['endDate'])\n",
+    " #New variables\n",
+    "df_steps_dt['startDatetime'] = pd.to_datetime(df_steps_dt['startDate'])\n",
+    "df_steps_dt['endDatetime'] = pd.to_datetime(df_steps_dt['endDate'])\n",
+    "\n",
+    "#Output value\n",
+    "print(df_steps_dt['startDatetime'][0])\n",
+    " #Verify object type\n",
+    "df_steps_dt['startDatetime'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c65b3624-ef60-4913-aaf9-0c1b6c4706e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>startDate</th>\n",
+       "      <th>endDate</th>\n",
+       "      <th>stepCount</th>\n",
+       "      <th>startDatetime</th>\n",
+       "      <th>endDatetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>StepCount</td>\n",
+       "      <td>2022-04-23 16:36:00 -0400</td>\n",
+       "      <td>2022-04-23 16:45:57 -0400</td>\n",
+       "      <td>141</td>\n",
+       "      <td>2022-04-23 16:36:00-04:00</td>\n",
+       "      <td>2022-04-23 16:45:57-04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>StepCount</td>\n",
+       "      <td>2022-04-23 16:46:25 -0400</td>\n",
+       "      <td>2022-04-23 16:49:23 -0400</td>\n",
+       "      <td>86</td>\n",
+       "      <td>2022-04-23 16:46:25-04:00</td>\n",
+       "      <td>2022-04-23 16:49:23-04:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        type                  startDate                    endDate  stepCount  \\\n",
+       "0  StepCount  2022-04-23 16:36:00 -0400  2022-04-23 16:45:57 -0400        141   \n",
+       "1  StepCount  2022-04-23 16:46:25 -0400  2022-04-23 16:49:23 -0400         86   \n",
+       "\n",
+       "              startDatetime               endDatetime  \n",
+       "0 2022-04-23 16:36:00-04:00 2022-04-23 16:45:57-04:00  \n",
+       "1 2022-04-23 16:46:25-04:00 2022-04-23 16:49:23-04:00  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Preview data\n",
+    "df_steps_dt.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b7a56af8-5805-4099-9078-7100ad8ab902",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>startDatetime</th>\n",
+       "      <th>startDay</th>\n",
+       "      <th>startTime</th>\n",
+       "      <th>endDatetime</th>\n",
+       "      <th>endDay</th>\n",
+       "      <th>endTime</th>\n",
+       "      <th>stepCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>StepCount</td>\n",
+       "      <td>2022-04-23 16:36:00-04:00</td>\n",
+       "      <td>2022-04-23</td>\n",
+       "      <td>16:36:00</td>\n",
+       "      <td>2022-04-23 16:45:57-04:00</td>\n",
+       "      <td>2022-04-23</td>\n",
+       "      <td>16:45:57</td>\n",
+       "      <td>141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>StepCount</td>\n",
+       "      <td>2022-04-23 16:46:25-04:00</td>\n",
+       "      <td>2022-04-23</td>\n",
+       "      <td>16:46:25</td>\n",
+       "      <td>2022-04-23 16:49:23-04:00</td>\n",
+       "      <td>2022-04-23</td>\n",
+       "      <td>16:49:23</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        type             startDatetime    startDay startTime  \\\n",
+       "0  StepCount 2022-04-23 16:36:00-04:00  2022-04-23  16:36:00   \n",
+       "1  StepCount 2022-04-23 16:46:25-04:00  2022-04-23  16:46:25   \n",
+       "\n",
+       "                endDatetime      endDay   endTime  stepCount  \n",
+       "0 2022-04-23 16:45:57-04:00  2022-04-23  16:45:57        141  \n",
+       "1 2022-04-23 16:49:23-04:00  2022-04-23  16:49:23         86  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create columns at 'day' and 'time' granularities\n",
+    "df_steps_dt['startDay'], df_steps_dt['startTime'] = df_steps_dt['startDatetime'].dt.date,\\\n",
+    "                                                    df_steps_dt['startDatetime'].dt.time\n",
+    "\n",
+    "df_steps_dt['endDay'], df_steps_dt['endTime'] = df_steps_dt['endDatetime'].dt.date,\\\n",
+    "                                                df_steps_dt['endDatetime'].dt.time\n",
+    "\n",
+    " #Drop + reorder columns\n",
+    "df_steps_dt = df_steps_dt.reindex(columns=['type','startDatetime','startDay','startTime','endDatetime','endDay','endTime','stepCount'])\n",
+    "\n",
+    "df_steps_dt.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "9a437607-9e69-46ae-8d62-1be28779660d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "type            0\n",
-       "creationDate    0\n",
-       "startDate       0\n",
-       "endDate         0\n",
-       "value           0\n",
+       "type             0\n",
+       "startDatetime    0\n",
+       "startDay         0\n",
+       "startTime        0\n",
+       "endDatetime      0\n",
+       "endDay           0\n",
+       "endTime          0\n",
+       "stepCount        0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Verify no missing data\n",
-    "steps_df.isna().sum()"
+    "#Data quality check\n",
+    " #Missing values: None\n",
+    "df_steps_dt.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "bcdc2c9d-f180-4e9a-b3ab-6584378c88b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Save as csv\n",
-    "steps_df.to_csv('steps_data.csv', index=True)"
+    "df_steps_dt.to_csv('steps_data.csv', index=True)"
    ]
   }
  ],
