--- a/Steps data anonymization + wrangling (XML to CSV).ipynb
+++ b/Steps data anonymization + wrangling (XML to CSV).ipynb
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "#Convert step count to int\n",
+    "#Convert step count to int + rename\n",
     "df_steps['stepCount'] = pd.to_numeric(df_steps['value'])\n",
     "df_steps.stepCount.dtypes"
    ]
