--- a/Steps data anonymization + wrangling (XML to CSV).ipynb
+++ b/Steps data anonymization + wrangling (XML to CSV).ipynb
@@ -22,9 +22,7 @@
    "source": [
     "import pandas as pd\n",
     "import xml.etree.ElementTree as ET\n",
-    "import io\n",
-    "\n",
-    "pd.set_option('display.max_columns', None)"
+    "import io"
    ]
   },
   {
